--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="contact/index.html">Contact</a>
     </div>
     <img src="portrait.png" class="profile">
-    <p id="description">Hello, I am Sami! This is my website! More content coming soon!</p>
+    <p id="description">Hello, I am Sami! This is my website!<br>More content coming soon!</p>
     <script src="script.js"</script>
 </body>
 </html>
