Add Social Media Buttons

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 <body>
     <div class="header">
         <h2>Sami Altarazi</h2>
+        <div class="icons">
+            <a class="icon icon-m" href="#"></a>
+            <a class="icon icon-gh" href="#"></a>
+        </div>
         <a href="about/index.html">About</a>
         <a href="resources/index.html">Resources</a>
-        <a href="contact/index.html">Contact</a>
     </div>
     <img src="portrait.png" class="profile">
     <p id="description">Hello, I am Sami! This is my website! <br> More content coming soon!</p>
