Added a link to my github

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h2>Sami Altarazi</h2>
         <div class="icons">
             <a class="icon icon-m" href="#"></a>
-            <a class="icon icon-gh" href="#"></a>
+            <a class="icon icon-gh" href="https://github.com/generalGreat" target="_blank"></a>
         </div>
         <a href="about/index.html">About</a>
         <a href="resources/index.html">Resources</a>
