--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="header">
         <h2>Sami Altarazi</h2>
         <div class="icons">
-            <a class="icon icon-m" href="#"></a>
+            <a class="icon icon-m" href="mailto:somaltarazi@gmail.com" target="_blank"></a>
             <a class="icon icon-gh" href="https://github.com/generalGreat" target="_blank"></a>
         </div>
         <a href="about/index.html">About</a>
